--- a/index.css
+++ b/index.css
@@ -1,19 +1,3 @@
-/* header영역 */
-.index-container header {
-    height: 80px;
-    width: 100%;
-    background-color: black;
-    color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 /* main-img 영역 */
 .main-wrapper {
     /* width: 85%; */
@@ -42,7 +26,7 @@
     background-position: 0 -500px;
 }
 
-.main-text .logo img {
+.main-text .main-logo img {
     height: 15px;
 }
 
