--- a/write-secondHand.css
+++ b/write-secondHand.css
@@ -3,6 +3,10 @@
     /* background-color: black; */
     background-color: rgb(240, 240, 240);
     height: 100vh;
+    width: 100%;
+    background-size: 100%;
+    background-image: url(jpg/night-shot-g2114d8e0e_19202.jpg);
+    background-repeat: no-repeat;
 }
 
 .title-wrapper {
@@ -13,7 +17,7 @@
     transform: translate(-50%, -50%);
     position: absolute;
     padding: 20px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 10px;
     box-shadow: 3px 3px 5px 1px rgba(200, 200, 200, 0.5);
 }
@@ -92,7 +96,7 @@
 }
 
 .submit-btn:hover,
-.close-btn:hover{
+.close-btn:hover{ 
     background-color: #d5f462;
     color: black;
 
