--- a/write-community.css
+++ b/write-community.css
@@ -1,6 +1,7 @@
 .write-container {
     /* background-color: black; */
-    background-color: rgb(240, 240, 240);
+    /* background-color: rgb(240, 240, 240); */
+    background-color: #1e1d21;
     height: 100vh;
 }
 
@@ -14,7 +15,7 @@
     padding: 20px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 3px 3px 5px 1px rgba(200, 200, 200, 0.5);
+    /* box-shadow: 3px 3px 5px 1px rgba(200, 200, 200, 0.5); */
 }
 
 .review-main-title {
