--- a/write-secondHand.css
+++ b/write-secondHand.css
@@ -4,8 +4,8 @@
     background-color: rgb(240, 240, 240);
     height: 100vh;
     width: 100%;
-    background-size: 100%;
-    background-image: url(jpg/night-shot-g2114d8e0e_19202.jpg);
+    /* background-size: 100%;
+    background-image: url(jpg/night-shot-g2114d8e0e_19202.jpg); */
     background-repeat: no-repeat;
 }
 
@@ -97,7 +97,7 @@
 
 .submit-btn:hover,
 .close-btn:hover{ 
-    background-color: #d5f462;
-    color: black;
+    background-color: #b7d15a;
+    color: white;
 
 }
