--- a/임시/index copy.css
+++ b/임시/index copy.css
@@ -1,17 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+body {
+    background-color: rgb(240, 240, 240);
+}
+
 .index-container {
     background-color: rgb(240, 240, 240);
-    /* background-color: #1e1d21; */
 }
 
 /* main-img 영역 */
 .main-wrapper {
-    /* width: 85%; */
+    width: 100%;
     margin: 80px auto 0;
     display: flex;
-    height: 500px;
-
+    height: 600px;
+    /* margin-bottom: 40px; */
+    /* background-color: white; */
+    border-radius: 50px;
 }
 
 /* main-text */
@@ -20,16 +25,17 @@
     flex-direction: column;
     justify-content: space-between;
     width: 30%;
-    height: 420px;
-    /* background-color: rgb(240, 240, 240); */
-    background-color: #1e1d21;
-    color: white;
-    padding: 40px 70px;
+    height: 520px;
+    background-color: rgb(230, 230, 230);
+    padding: 40px 50px;
+    border-radius: 10px;
 }
 
 .main-img {
+    /* border-start-end-radius: 10px;
+    border-bottom-right-radius: 10px; */
     width: 70%;
-    background-image: url(jpg/main-img.jpg);
+    background-image: url(../jpg/main-img.jpg);
     background-size: 100%;
     /* background-repeat: no-repeat; */
     background-position: 0 -500px;
@@ -40,34 +46,34 @@
 }
 
 .main-title-wrapper {
-    height: 130px;
+    height: 220px;
 }
 
-.gobtn {
+.main-title-wrapper a {
+    padding: 8px 20px;
+    background-color: #b7d15a;
+    /* background-color: #d5f462; */
+    text-decoration: none;
+    color: white;
+    border-radius: 5px;
+    font-weight: 300;
+    font-size: 16px;
     display: flex;
     width: fit-content;
     align-items: center;
 }
 
-.main-title-wrapper a {
-    padding: 5px 15px;
-    background-color: #d5f462;
-    text-decoration: none;
-    color: #1e1d21;
-    border-radius: 5px;
-    font-weight: 300;
-}
-
 .gobtn img {
-    margin-left: 5px;
-    width: 20px;
+    margin-left: 10px;
+    width: 8px;
 }
 
 .main-title {
-
     text-align: left;
     font-weight: 300;
     margin: 0 0 10px;
+    font-size: 35px;
+    /* line-height: 52px; */
 
 }
 
@@ -79,70 +85,61 @@
 
 
 
-/* 2번째 영역 전체 */
-.second-warpper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70%;
-    margin: 40px auto;
-}
-
 /* 오늘의 날씨 영역 */
 .sec1-container {
     display: flex;
     flex-direction: column;
-    margin: 25px auto;
+    width: 55%;
+    /* width: 1000px; */
+    margin: 0 auto;
 }
 
 .sec1-main-wrapper {
-
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 /* 타이틀, 서브타이틀 공통영역 */
 .sec1-title,
 .sec2-title,
 .sec3-title {
-    font-size: 15px;
-    margin: 0 auto;
+    /* font-family: 'GowunDodum-Regular'; */
+    font-size: 30px;
+    margin: 0;
+    padding: 40px 0 2px;
     font-weight: 400;
-    padding: 10px 30px;
-    background-color: white;
-    width: fit-content;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-
 }
 
-/* .sec1-sub,
+.sec1-sub,
 .sec2-sub,
 .sec3-sub {
     font-weight: 400;
     font-size: 15px;
     margin: 0;
     font-weight: 300;
-} */
+}
 
-/* .weather-wrap {
+.weather-wrap {
     display: flex;
-    justify-content: center;
     flex-direction: column;
-} */
+    /* margin-bottom: 50px; */
+    margin-bottom: 10px;
+    justify-content: space-between;
+}
 
 /* 오늘의 날씨 박스 영역 공통 부분 */
 .weather-today-wrapper,
 .weather-mountain-wrapper {
-    width: 430px;
-    height: 250px;
-    background-color: #1e1d21;
-    color: white;
-    border-radius: 20px;
+    width: 45.5%;
+    /* background-color: rgb(230, 230, 230); */
+    background-color: white;
+    margin-top: 10px;
+    border-radius: 10px;
     padding: 20px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     text-align: center;
-    margin: 5px;
 }
 
 .weather-main {
@@ -153,9 +150,9 @@
 }
 
 .region {
-    background-color: #d5f462;
+    background-color: #b7d15a;
     padding: 5px 20px;
-    color: #1e1d21;
+    color: white;
     border-radius: 20px;
     width: fit-content;
     margin: 0 auto;
@@ -187,88 +184,79 @@
     margin-top: 5px;
     text-align: center;
     font-size: 14px;
-    color: rgb(150, 150, 150);
+    color: rgb(100, 100, 100);
 }
-
 
 /* 오늘의 산, 막걸리 영역 */
 .sec2-container {
-    background-color: #1e1d21;
+    /* background-color: #fbf4e6; */
+    background-color: rgb(230, 230, 230);
+    height: 500px;
     text-align: center;
-    width: 100%;
-    margin: 0 auto;
-    border-radius: 20px;
-    height: 585px;
-}
+    /* padding: 20px; */
+    /* width: 55%; */
 
-.mountain-main-warpper {
-    /* display: flex;
-    flex-direction: column; */
-    /* padding: 10px; */
-}
-
-.today-mountain-wrapper {
-    height: 300px;
-    /* display: flex; */
-    color: white;
-    margin: 20px auto;
-    position: relative;
-    /* align-items: start; */
-    border-radius: 20px;
-}
-
-
-/* 오늘 이미지 */
-.today-mountain-img {
-    margin: 0 auto;
-    width: 97%;
-    margin-top: 30px;
-    height: 350px;
-    border-radius: 20px;
-    background-image: url(jpg/contents_images-1655441432506-1.jpg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: 0 -180px;
-    background-color: #d5f462;
-}
-
-.today-mountain-title {
-    font-size: 25px;
-    color: #d5f462;
-    font-weight: 500;
-    margin-bottom: 5px;
-}
-
-.today-mountain-content {
-    width: 80%;
-    margin: 0 auto 15px;
-    font-size: 16px;
-}
-
-.today-mountain-price {
-    font-size: 19px;
+    margin: 30px auto 0;
+    border-radius: 10px;
 }
 
 /* 화살표 공통영역 */
 .less,
 .then {
-    width: 35px;
+    width: 40px;
+    height: 40px;
     position: absolute;
-    transform: translate(0%, -45%);
+    transform: translate(0%, -50%);
 }
 
 .less {
     top: 50%;
-    left: -5%;
+    left: -7%;
 }
 
 .then {
     top: 50%;
-    right: -5%;
+    right: -7%;
 }
 
-
-/* sec3 영역 */
-.sec3-container{
+.today-mountain-wrapper {
+    width: 56%;
+    height: 300px;
+    display: flex;
+    flex-direction: row;
     background-color: white;
+    margin: 20px auto;
+    position: relative;
+    align-items: center;
+    border-radius: 10px;
+
+}
+
+.mountain-main-warpper {
+    display: flex;
+    padding: 10px;
+}
+
+.today-mountain-img {
+    height: 280px;
+}
+
+.today-mountain {
+    padding: 15px 40px;
+    text-align: left;
+}
+
+.today-mountain-title {
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+.today-mountain-content {
+    height: 180px;
+    font-size: 20px;
+}
+
+.today-mountain-price {
+    font-size: 19px;
 }
