--- a/review.css
+++ b/review.css
@@ -139,25 +139,27 @@
 }
 
 .write-btn:hover {
-    background-color: #fbf4e6;
+    background-color: #b7d15a;
+    color: white;
 }
 
 /* 관리자 게시물 add classlist 나중에 */
 .admin-write {
     width: 50%;
     padding: 2px 10px;
-    background-color: #fae4e4;
-    color: #f63b3e;
+    /* color: #f63b3e; */
+    color: white;
     border-radius: 2px;
-    background-color: #fff5f5;
-    border: 0.5px solid #f6c9cb;
+    /* background-color: #fff5f5; */
+    background-color: #b7d15a;
+    border: 0.5px solid #d4e78e;
     font-weight: 500;
     font-size: 13px;
 }
 
 .admin-write-title {
     font-weight: 500;
-    color: #f63b3e;
+    color: #9eb842;
 }
 
 /* 페이지네이션 */
