--- a/issue-list.css
+++ b/issue-list.css
@@ -11,9 +11,9 @@
     background-color: lightgray;
     margin-bottom: 30px;
     margin: 50px auto 50px;
-    background: url(jpg/i.jpg);
+    background: url(jpg/issue1.jpg);
     background-size: 100%;
-    background-position: 0 -350px;
+    background-position: 0 -150px;
     border-radius: 10px;
 }
 
